--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div class="title">
-    {{title}}
+<div class="header">
+    <div class="title">{{title}}</div>
+    <div class="tagline">{{tagline}}</div>
 </div>
 <app-image-upload></app-image-upload>
