--- a/src/app/components/image-popup/image-popup.component.html
+++ b/src/app/components/image-popup/image-popup.component.html
@@ -1,4 +1,7 @@
 <div>
+    <div style="height: 0;">
+        <button></button>
+    </div>
     <img [src]="imageUrl" alt="Image" class="image">
     <div style="margin: 10px;">
         <div *ngIf="savedTags.length > 0" style="font-size: 18px;">Tags</div>
