--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -9,20 +9,20 @@
 @include mat.core();
 
 $aks-primary-palette: (
-  50 : #e9ecf5,
-  100 : #c9cfe7,
-  200 : #a5afd7,
-  300 : #808ec6,
-  400 : #6576ba,
-  500 : #4a5eae,
-  600 : #4356a7,
-  700 : #3a4c9d,
-  800 : #324294,
-  900 : #223184,
-  A100 : #c3cbff,
-  A200 : #909fff,
-  A400 : #5d72ff,
-  A700 : #435cff,
+  50 : #e7eaef,
+  100 : #c4ccd6,
+  200 : #9daabb,
+  300 : #75879f,
+  400 : #586e8b,
+  500 : #3a5476,
+  600 : #344d6e,
+  700 : #2c4363,
+  800 : #253a59,
+  900 : #182946,
+  A100 : #85afff,
+  A200 : #528dff,
+  A400 : #1f6cff,
+  A700 : #065bff,
   contrast: (50 : #000000,
     100 : #000000,
     200 : #000000,
