--- a/src/app/components/image-upload/image-upload.component.html
+++ b/src/app/components/image-upload/image-upload.component.html
@@ -1,22 +1,31 @@
 <div class="upload-image">
-    <input matInput type="file" multiple (change)="onChange($event)" />
-    <button mat-raised-button color="primary"
-        [disabled]="this.imgUploadCount > imgUploadLimit || this.imgUploadCount == 0" (click)="onUpload()">
-        Upload
-    </button>
+    <div class="upload-btn-section">
+        <label for="file-input" class="file-select-btn">
+            <mat-icon>add_a_photo</mat-icon>
+            <span>Add Images</span>
+        </label>
+        <input id="file-input" class="file-input" matInput type="file" accept="image/*" multiple
+            (change)="onChange($event)" />
+        <div class="file-names" *ngIf="imgUploadCount > 0">
+            <span class="names ellipsis">{{fileNames}}</span>
+            <span class="count" *ngIf="imgUploadCount > 1">({{imgUploadCount}} images)</span>
+        </div>
+        <button mat-raised-button color="primary" [hidden]="imgUploadCount > imgUploadLimit || imgUploadCount == 0"
+            (click)="onUpload()">
+            Upload
+        </button>
+    </div>
+    <div class="error-section" *ngIf="imgUploadCount > imgUploadLimit">
+        You can choose up to {{imgUploadLimit}} images only
+    </div>
 </div>
-<span style="color: red;" *ngIf="this.imgUploadCount > imgUploadLimit">
-    You can choose up to {{imgUploadLimit}} images only
-</span>
 
 
 <div class="container" *ngIf="loading">
     <h3>Loading ...</h3>
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
 </div>
 
-<div class="image-title ">
-    Images
-</div>
 <div class="image-list">
     <div *ngFor="let imageData of imageDataArray" class="image">
         <img [src]="imageData.imageURL" alt="Image" (click)="openImagePopup(imageData.imageId ,imageData.imageURL)">
